--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+
+#line {
+    display: none;
+}
+
+.line-options {
+    display: none
+}
+
 #chart_div {
     width: 100%;
     min-height: 450px;
